--- a/src/main/resources/configuracao.json
+++ b/src/main/resources/configuracao.json
@@ -1,5 +1,5 @@
 {
-	"diretorioProjeto": "/home/marcio/Desktop/arquivos-gerador/usuario",
+	"diretorioProjetoJava": "/home/marcio/eclipse-workspace/gc-teste-service",
 	"entidades": [
 	{
 			"pacote": "br.org.ici.saude.endereco",
@@ -15,9 +15,6 @@
 					"mensagem": "Código Cidade",
 					"id": true,
 					"tipo": "Integer",
-					"validadores": [
-						"notNull"
-					],
 					"web": ["get"]
 				},
 				{
@@ -41,9 +38,6 @@
 					"nome": "cdDocumentoCpf",
 					"mensagem": "Código Documento CPF",
 					"tipo": "Integer",
-					"validadores": [
-						"notNull"
-					],
 					"web": ["get"]
 				},
 				{
@@ -88,9 +82,6 @@
 					"mensagem": "Código usuário",
 					"id": true,
 					"tipo": "Integer",
-					"validadores": [
-						"notNull"
-					],
 					"web": ["get","put","post","pesquisa"]
 				},
 				{
@@ -99,7 +90,7 @@
 					"tipo": "String",
 					"validadores": [
 						"notEmpty",
-						"min;size=10"
+						"min;value=10"
 					],
 					"web": ["get","put","post","pesquisa"]
 				},
@@ -109,7 +100,7 @@
 					"tipo": "String",
 					"validadores": [
 						"notEmpty",
-						"min;size=10"
+						"min;value=10"
 					],
 					"web": ["get","put","post","pesquisa"]
 				},
@@ -119,7 +110,7 @@
 					"tipo": "String",
 					"validadores": [
 						"notEmpty",
-						"min;size=10"
+						"min;value=10"
 					],
 					"web": ["get","put","post","pesquisa"]
 				},
@@ -154,7 +145,7 @@
 				{
 					"nome": "documentoCpf",
 					"mensagem": "Documento CPF",
-					"tipo": "DocumentoEntity",
+					"tipo": "DocumentoCpfEntity",
 					"validadores": [
 						"notNull"
 					],
@@ -162,12 +153,12 @@
 						"tipoMapeamento": "oneToOne",
 						"cascade": "ALL"
 						},
-					"web": ["get","post"]
+					"web": ["get","post", "pesquisa"]
 				},
 				{
 					"nome": "cidadeNascimento",
 					"mensagem": "Cidade Nascimento",
-					"tipo": "br.org.ici.saude.usuario.endereco.CidadeEntity",
+					"tipo": "br.org.ici.saude.endereco.entity.CidadeEntity",
 					"mapeamento": {
 						"tipoMapeamento": "oneToOne",
 						"joinColumn": true
